# these

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  cabal.deprecated.haskell-ci  cabal.deprecated.project  cabal.haskell-ci  cabal.project  default.nix  gen-haskell-ci.sh  stack.yaml  these.cabal
.github/workflows/: haskell-ci-deprecated.yml  haskell-ci.yml
Control/Monad/: Chronicle.hs
Control/Monad/Chronicle/: Class.hs
Control/Monad/Trans/: Chronicle.hs
Data/: Align.hs  Crosswalk.hs  Semialign.hs  These.hs  Zip.hs
Data/Align/: Indexed.hs  Key.hs
Data/Functor/: These.hs
Data/Semialign/: Internal.hs
Data/These/: Combinators.hs  Lens.hs
monad-chronicle/: CHANGELOG.md  monad-chronicle.cabal
monad-chronicle/src/Control/Monad/: Chronicle.hs
monad-chronicle/src/Control/Monad/Chronicle/: Class.hs
monad-chronicle/src/Control/Monad/Trans/: Chronicle.hs
monad-chronicle/src/Control/Monad/Trans/Chronicle/: CPS.hs
semialign/: CHANGELOG.md  semialign.cabal
semialign-indexed/: CHANGELOG.md  semialign-indexed.cabal
semialign-indexed/src/Data/Semialign/: Indexed.hs
semialign-optics/: CHANGELOG.md  cabal.project  semialign-optics.cabal
semialign-optics/src/Data/Semialign/: Indexed.hs
semialign/src/Data/: Align.hs  Crosswalk.hs  Semialign.hs  Zip.hs
semialign/src/Data/Semialign/: Indexed.hs  Internal.hs
semialign/src/Data/Semialign/Internal/: Tuples.hs
test/: Tests.hs
test/Tests/: Align.hs  AlignWithKey.hs  Crosswalk.hs  These.hs
these/: CHANGELOG.md  cabal.project  these.cabal
these-lens/: CHANGELOG.md  cabal.project  these-lens.cabal
these-lens/src/Data/These/: Lens.hs
these-optics/: CHANGELOG.md  these-optics.cabal
these-optics/src/Data/These/: Optics.hs
these-tests/: these-tests.cabal
these-tests/test/: Tests.hs
these-tests/test/Tests/: AlignWrong.hs  Crosswalk.hs  Orphans.hs  Semialign.hs  SemialignWithIndex.hs  These.hs
these/src/Data/: These.hs
these/src/Data/Functor/: These.hs
these/src/Data/These/: Combinators.hs
