Name:                these
Version:             0.6.0.0
Synopsis:            An either-or-both data type, with corresponding hybrid error/writer monad transformer.
Homepage:            https://github.com/isomorphism/these
License:             BSD3
License-file:        LICENSE
Author:              C. McCann
Maintainer:          cam@uptoisomorphism.net
Category:            Data,Control
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules:     Data.These,
                       Data.Align,
                       Control.Monad.Chronicle,
                       Control.Monad.Chronicle.Class,
                       Control.Monad.Trans.Chronicle
  Build-depends:       base          >= 3   && < 5,
                       containers    >= 0.4 && < 0.6,
                       mtl           >= 2   && < 2.3,
                       transformers  >= 0.2 && < 0.5,
                       semigroups    >= 0.8 && < 0.17,
                       bifunctors    >= 0.1 && < 5.1,
                       semigroupoids >= 1.0 && < 5.1,
                       profunctors   >= 3   && < 5.2,
                       vector        >= 0.4 && < 0.12
  if impl(ghc <7.5)
    build-depends:     ghc-prim
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base              >= 4.5  && < 4.9,
                       tasty             >= 0.10 && < 0.11,
                       tasty-quickcheck  >= 0.8  && < 0.9,
                       transformers      >= 0.2  && < 0.5,
                       vector            >= 0.4 && < 0.12,
                       bifunctors        >= 0.1 && < 5.1,
                       these,
                       QuickCheck
