Name:                these
Version:             0.6.1.0
Synopsis:            An either-or-both data type & a generalized 'zip with padding' typeclass
Homepage:            https://github.com/isomorphism/these
License:             BSD3
License-file:        LICENSE
Author:              C. McCann
Maintainer:          cam@uptoisomorphism.net
Category:            Data,Control
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.8
Description:         
  This package provides a data type @These a b@ which can hold a value of either
  type or values of each type. This is usually thought of as an "inclusive or" 
  type (contrasting @Either a b@ as "exclusive or") or as an "outer join" type 
  (contrasting @(a, b)@ as "inner join").
  .  
  The major use case of this is provided by the @Align@ class, representing a
  generalized notion of "zipping with padding" that combines structures without
  truncating to the size of the smaller input.
  .  
  Also included is @ChronicleT@, a monad transformer based on the Monad instance 
  for @These a@, along with the usual monad transformer bells and whistles.

Library
  Exposed-modules:     Data.These,
                       Data.Align,
                       Control.Monad.Chronicle,
                       Control.Monad.Chronicle.Class,
                       Control.Monad.Trans.Chronicle
  Build-depends:       base                     >= 3     && < 5,
                       containers               >= 0.4   && < 0.6,
                       mtl                      >= 2     && < 2.3,
                       transformers             >= 0.2   && < 0.5,
                       semigroups               >= 0.8   && < 0.18,
                       bifunctors               >= 0.1   && < 5.1,
                       semigroupoids            >= 1.0   && < 5.1,
                       profunctors              >= 3     && < 5.2,
                       vector                   >= 0.4   && < 0.12,
                       transformers-compat      >= 0.2   && < 0.5,
                       hashable                 >= 1.2.3 && < 1.3,
                       unordered-containers     >= 0.2   && < 0.3,
                       data-default-class       >= 0.0   && < 0.1
  if impl(ghc <7.5)
    build-depends:     ghc-prim
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       these,
                       base                   >= 4.5   && < 4.9,
                       transformers           >= 0.2   && < 0.5,
                       vector                 >= 0.4   && < 0.12,
                       bifunctors             >= 0.1   && < 5.1,
                       containers             >= 0.4   && < 0.6,
                       hashable               >= 1.2.3 && < 1.3,
                       unordered-containers   >= 0.2   && < 0.3,
                       tasty                  >= 0.10  && < 0.12,
                       tasty-quickcheck       >= 0.8   && < 0.9,
                       QuickCheck             >= 2.8   && < 2.9,
                       quickcheck-instances   >= 0.3.6 && < 0.4
