cabal-version:      >=1.10
name:               monad-chronicle
version:            1.0.1
x-revision:         1
synopsis:           These as a transformer, ChronicleT
homepage:           https://github.com/haskellari/these
license:            BSD3
license-file:       LICENSE
author:             C. McCann, Oleg Grenrus
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
category:           Control, These
build-type:         Simple
extra-source-files: CHANGELOG.md
description:
  This packages provides @ChronicleT@, a monad transformer based on
  the @Monad@ instance for @These a@, along with the usual monad
  transformer bells and whistles.

tested-with:
    GHC ==7.4.2
     || ==7.6.3
     || ==7.8.4
     || ==7.10.3
     || ==8.0.2
     || ==8.2.2
     || ==8.4.4
     || ==8.6.5
     || ==8.8.4
     || ==8.10.7
     || ==9.0.2
     || ==9.2.4
     || ==9.4.1
  , GHCJS ==8.4

source-repository head
  type:     git
  location: https://github.com/haskellari/these.git

flag semigroupoids
  description: Build with semigroupoids dependency
  manual:      True
  default:     True

library
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >=8.0)
    ghc-options: -Wno-trustworthy-safe

  hs-source-dirs:   src
  exposed-modules:
    Control.Monad.Chronicle
    Control.Monad.Chronicle.Class
    Control.Monad.Trans.Chronicle

  -- ghc boot libs
  build-depends:
      base          >=4.5.1.0 && <4.18
    , mtl           >=2.1.3   && <2.4
    , transformers  >=0.3.0.0 && <0.7

  build-depends:    these >=1 && <1.2

  -- other dependencies
  build-depends:
      data-default-class   >=0.1.2.0 && <0.2
    , transformers-compat  >=0.6.5   && <0.8

  if !impl(ghc >=8.0)
    build-depends: semigroups >=0.18.5 && <0.21

  -- Ensure Data.Functor.Classes is always available
  if impl(ghc >=7.10)
    build-depends: transformers >=0.4.2.0

  if flag(semigroupoids)
    build-depends: semigroupoids >=5.3.2 && <5.4
