cabal-version:      >=1.10
name:               monad-chronicle
version:            1.1
synopsis:           These as a transformer, ChronicleT
homepage:           https://github.com/haskellari/these
license:            BSD3
license-file:       LICENSE
author:             C. McCann, Oleg Grenrus
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
category:           Control, These
build-type:         Simple
extra-source-files: CHANGELOG.md
description:
  This packages provides @ChronicleT@, a monad transformer based on
  the @Monad@ instance for @These a@, along with the usual monad
  transformer bells and whistles.

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

source-repository head
  type:     git
  location: https://github.com/haskellari/these.git

flag semigroupoids
  description: Build with semigroupoids dependency
  manual:      True
  default:     True

library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-trustworthy-safe
  hs-source-dirs:   src
  exposed-modules:
    Control.Monad.Chronicle
    Control.Monad.Chronicle.Class
    Control.Monad.Trans.Chronicle

  -- ghc boot libs
  build-depends:
      base          >=4.12.0.0 && <4.22
    , mtl           >=2.2.2    && <2.4
    , transformers  >=0.5.6.2  && <0.7

  build-depends:    these >=1.2.1 && <1.3

  -- other dependencies
  build-depends:    transformers-compat >=0.6.5 && <0.8

  if flag(semigroupoids)
    build-depends: semigroupoids >=6.0.1 && <6.1
