cabal-version:      >=1.10
name:               semialign-indexed 
version:            1
x-revision:         1
synopsis:           SemialignWithIndex, i.e. izipWith and ialignWith
homepage:           https://github.com/isomorphism/these
license:            BSD3
license-file:       LICENSE
author:             C. McCann, Oleg Grenrus
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
category:           Data, These
build-type:         Simple
extra-source-files: CHANGELOG.md
description:
  This package provides @SemialignWithIndex@ with two members
  .
  @
  class (FunctorWithIndex i f, Semialign f) => SemialignWithIndex i f | f -> i where
  \    ialignWith :: (i -> These a b -> c) -> f a -> f b -> f c
  \    izipWith   :: (i -> a -> b -> c)    -> f a -> f b -> f c
  @
  .
  Superclass @FunctorWithIndex@ is from @lens@ package.

tested-with:
  GHC ==7.4.2 || ==7.6.3 || ==7.8.4 || ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1

source-repository head
  type:     git
  location: https://github.com/isomorphism/these.git

library
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >=8.0)
    ghc-options: -Wno-trustworthy-safe

  hs-source-dirs:   src
  exposed-modules:  Data.Semialign.Indexed

  -- ghc boot libs
  build-depends:
      base        >=4.5.1.0 && <4.14
    , containers  >=0.4.2.1 && <0.7

  build-depends:
      semialign  >=1 && <1.1
    , these      >=1 && <1.1

  -- other dependencies
  build-depends:
      hashable              >=1.2.7.0  && <1.4
    , lens                  >=4.17     && <4.19
    , unordered-containers  >=0.2.8.0  && <0.3
    , vector                >=0.12.0.2 && <0.13

  -- base shims
  if !impl(ghc >=8.0)
    build-depends:
        transformers         >=0.3.0.0 && <0.6
      , transformers-compat  >=0.6.5   && <0.7
