cabal-version:      1.22
name:               semialign-optics
version:            1.2
x-revision:         1
synopsis:           SemialignWithIndex, i.e. izipWith and ialignWith
homepage:           https://github.com/haskellari/these
license:            BSD3
license-file:       LICENSE
author:             C. McCann, Oleg Grenrus
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
category:           Data, These
build-type:         Simple
extra-source-files: CHANGELOG.md
description:
  This package is deprecated.
  It simply re-exports [semialign](https://hackage.haskell.org/package/semialign)
  (and adds a @optics-core@ constraint).

tested-with:
    GHC ==8.2.2
     || ==8.4.4
     || ==8.6.5
     || ==8.8.4
     || ==8.10.4
     || ==9.0.1
  , GHCJS ==8.4

source-repository head
  type:     git
  location: https://github.com/haskellari/these.git
  subdir:   semialign-optics

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  reexported-modules: Data.Semialign.Indexed
  build-depends:      base >=4.10.0.0 && <4.17
  build-depends:      semialign >=1.2 && <1.2.1
  build-depends:      optics-core ==0.4.*
