cabal-version:      >=1.10
name:               these-optics
version:            1.0.2
synopsis:           Optics for These
homepage:           https://github.com/haskellari/these
license:            BSD3
license-file:       LICENSE
author:             C. McCann, Oleg Grenrus
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
category:           Data, These, Optics
build-type:         Simple
extra-source-files: CHANGELOG.md
description:        This package provides Prism and Traversals for @These@.
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/haskellari/these.git
  subdir:   these-optics

library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-trustworthy-safe
  hs-source-dirs:   src
  exposed-modules:  Data.These.Optics

  -- ghc boot libs
  build-depends:    base >=4.12 && <4.21

  -- these
  build-depends:    these >=1.2.1 && <1.3

  -- other dependencies
  build-depends:    optics-core >=0.4.1.1 && <0.5
