cabal-version: >=1.10
name:          these-tests
version:       0
synopsis:      Tests for these packages.
description:
  Tests for these, these-lens, monad-chronicle, semialign and semialign-indexed

homepage:      https://github.com/isomorphism/these
license:       BSD3
license-file:  LICENSE
author:        C. McCann, Oleg Grenrus
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
category:      Data, Control, These, Tests
build-type:    Simple
tested-with:
  GHC ==7.4.2 || ==7.6.3 || ==7.8.4 || ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1

source-repository head
  type:     git
  location: https://github.com/isomorphism/these.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Dummy
  build-depends: base <4.13

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Tests.hs
  other-modules:
    Tests.AlignWrong
    Tests.Crosswalk
    Tests.Orphans
    Tests.Semialign
    Tests.SemialignWithIndex
    Tests.These

  -- library constrained dependencies
  build-depends:
      aeson
    , assoc
    , base
    , base-compat
    , bifunctors
    , binary
    , containers
    , hashable
    , lens
    , QuickCheck
    , semialign
    , semialign-indexed
    , tagged
    , these
    , these-lens
    , transformers
    , unordered-containers
    , vector

  if !impl(ghc >=8.0)
    build-depends: semigroups

  -- additional dependencies
  build-depends:
      quickcheck-instances  >=0.3.15 && <0.4
    , tasty                 >=1.2    && <1.3
    , tasty-quickcheck      >=0.10   && <0.11
    , transformers-compat   >=0.6.5  && <0.7
