cabal-version: >=1.10
name:          these-tests
version:       0
synopsis:      Tests for these packages.
description:
  Tests for these, these-lens, monad-chronicle, semialign and semialign-indexed

homepage:      https://github.com/haskellari/these
license:       BSD3
license-file:  LICENSE
author:        C. McCann, Oleg Grenrus
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
category:      Data, Control, These, Tests
build-type:    Simple
tested-with:
    GHC ==7.4.2
     || ==7.6.3
     || ==7.8.4
     || ==7.10.3
     || ==8.0.2
     || ==8.2.2
     || ==8.4.4
     || ==8.6.5
     || ==8.8.4
     || ==8.10.4
     || ==9.0.1
     || ==9.2.1
  , GHCJS ==8.4

source-repository head
  type:     git
  location: https://github.com/haskellari/these.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Dummy
  build-depends:    base <4.17

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Tests.hs
  other-modules:
    Tests.AlignWrong
    Tests.Crosswalk
    Tests.Orphans
    Tests.Semialign
    Tests.SemialignWithIndex
    Tests.These

  -- library constrained dependencies
  build-depends:
      assoc
    , base
    , base-compat
    , bifunctors
    , binary
    , containers
    , hashable
    , indexed-traversable
    , lens
    , QuickCheck
    , semialign
    , tagged
    , these
    , these-lens
    , transformers
    , unordered-containers
    , vector

  if !impl(ghc >=8.0)
    build-depends: semigroups

  -- additional dependencies
  build-depends:
      quickcheck-instances  >=0.3.23 && <0.4
    , tasty                 >=1.2    && <1.5
    , tasty-quickcheck      >=0.10   && <0.11
    , transformers-compat   >=0.6.5  && <0.7

  if impl(ghc >=7.6)
    build-depends: lattices >=2.0.1 && <2.1
