cabal-version: >=1.10
name:          these-tests
version:       0
synopsis:      Tests for these packages.
description:
  Tests for these, these-lens, monad-chronicle, semialign and semialign-indexed

homepage:      https://github.com/haskellari/these
license:       BSD3
license-file:  LICENSE
author:        C. McCann, Oleg Grenrus
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
category:      Data, Control, These, Tests
build-type:    Simple
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/haskellari/these.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Dummy
  build-depends:    base <5

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Tests.hs
  other-modules:
    Tests.AlignWrong
    Tests.Crosswalk
    Tests.Orphans
    Tests.Semialign
    Tests.SemialignWithIndex
    Tests.These

  -- library constrained dependencies
  build-depends:
      assoc
    , base
    , binary
    , containers
    , hashable
    , indexed-traversable
    , lens
    , QuickCheck
    , semialign
    , tagged
    , these
    , these-lens
    , transformers
    , unordered-containers
    , vector

  -- additional dependencies
  build-depends:
      lattices              >=2.2.1  && <2.3
    , quickcheck-instances  >=0.3.23 && <0.4
    , tasty                 >=1.2    && <1.6
    , tasty-quickcheck      >=0.10   && <0.11
    , transformers-compat   >=0.6.5  && <0.8
